# HandPlot

./: CMakeCache.txt  CMakeLists.txt  HandPlot.cpp  Makefile  README.md  cmake_install.cmake  handplot_bkp.cpp
LibFT4222/dll/: a.out
LibFT4222/lib/amd64/: libboost_atomic-vc100-mt-1_54.lib  libboost_chrono-vc100-mt-1_54.lib  libboost_date_time-vc100-mt-1_54.lib  libboost_exception-vc100-mt-1_54.lib  libboost_system-vc100-mt-1_54.lib  libboost_thread-vc100-mt-1_54.lib
LibFT4222/lib/i386/: LibFT4222.lib  libboost_atomic-vc100-mt-1_54.lib  libboost_chrono-vc100-mt-1_54.lib  libboost_date_time-vc100-mt-1_54.lib  libboost_exception-vc100-mt-1_54.lib  libboost_system-vc100-mt-1_54.lib  libboost_thread-vc100-mt-1_54.lib
morphologica-1.0/dongle/: Cursor_Demo.cpp  Cursor_Demo.h  FingerWave_Demo.cpp  FingerWave_Demo.h  LibFT4222.h  VoltageWave_Demo.cpp  VoltageWave_Demo.h  driver.cpp  driver.h  driver.pro  driver.vcxproj  driver_static.pro  helpers.cpp  helpers.h  main.c  main.cpp  read.cpp  read.h  runMain.sh  rundemos.cpp  rundemos.h
morphologica-1.0/morph/: Visual.h
morphologica-1.0/standalone_examples/template/: CMakeCache.txt
